<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu1"
        android:checked="true"
        android:icon="@drawable/search_gray"
        android:title="@string/tab1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu2"
        android:checked="false"
        android:icon="@drawable/appointment_gray"
        android:title="@string/tab2"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu3"
        android:checked="false"
        android:icon="@drawable/report_gray"
        android:title="@string/tab3"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu4"
        android:checked="false"
        android:icon="@drawable/notification_gray"
        android:title="@string/tab4"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu5"
        android:checked="false"
        android:icon="@drawable/acc_gray"
        android:title="@string/tab5"
        app:showAsAction="ifRoom" />
</menu>