<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:layout_weight="1"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/sds"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <LinearLayout
                android:id="@+id/fff"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/applogo"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/elixer" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:theme="@style/TextLabel"
                android:id="@+id/ed1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvCityLabel"
                android:layout_marginTop="30dp">

                <EditText
                    android:id="@+id/r_et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="User ID"

                    android:singleLine="true"
                    android:ellipsize="end"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:theme="@style/TextLabel"
                android:id="@+id/ed2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ed1"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/r_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvLogin"
                style="@style/Button.Green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ed2"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttonshape"
                android:clickable="true"
                android:elevation="2dp"
                android:text="Login"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/link_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:clickable="true"
                android:gravity="right"
                android:textColor="@color/colorPrimary"
                android:onClick="resetPassword"
                android:text="@string/forget_link"
                android:textSize="16dip"
                android:layout_below="@+id/tvLogin"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView

                android:id="@+id/link_registration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLogin"
                android:layout_marginTop="50dp"
                android:gravity="right"
                android:layout_marginBottom="10dp"
                android:textColor="@color/gray_8c"
                android:text="@string/signup_link"
                android:textSize="14dip" />

            <TextView
                android:id="@+id/tvTerms"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/link_registration"
                android:layout_marginTop="5dp"
                android:gravity="right"
                android:textColor="@color/gray_8c"
                android:text="@string/terms_amp_conditions"
                android:textSize="14dip" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
